--- a/Weasel.html
+++ b/Weasel.html
@@ -86,7 +86,7 @@ logger = logging.getLogger(__name__)
 class Weasel(QMainWindow, WeaselProgrammingInterface):
 
     def __init__(self): 
-        &#34;&#34;&#34;Creates the MDI container. Joao Sousa GH Action test 14/10/2021.&#34;&#34;&#34;
+        &#34;&#34;&#34;Creates the MDI container.&#34;&#34;&#34;
         super().__init__()
         print(&#34;=====================================&#34;)
         print(&#34;MESSAGE TO THE USER:&#34;)
@@ -266,7 +266,7 @@ if __name__ == &#39;__main__&#39;:
 </code></dt>
 <dd>
 <div class="desc"><p>QMainWindow(parent: QWidget = None, flags: Union[Qt.WindowFlags, Qt.WindowType] = Qt.WindowFlags())</p>
-<p>Creates the MDI container. Joao Sousa GH Action test 14/10/2021.</p></div>
+<p>Creates the MDI container.</p></div>
 <details class="source">
 <summary>
 <span>Expand source code</span>
@@ -274,7 +274,7 @@ if __name__ == &#39;__main__&#39;:
 <pre><code class="python">class Weasel(QMainWindow, WeaselProgrammingInterface):
 
     def __init__(self): 
-        &#34;&#34;&#34;Creates the MDI container. Joao Sousa GH Action test 14/10/2021.&#34;&#34;&#34;
+        &#34;&#34;&#34;Creates the MDI container.&#34;&#34;&#34;
         super().__init__()
         print(&#34;=====================================&#34;)
         print(&#34;MESSAGE TO THE USER:&#34;)
