--- a/Displays/ImageViewers/ComponentsUI/ImageSliders.html
+++ b/Displays/ImageViewers/ComponentsUI/ImageSliders.html
@@ -491,6 +491,10 @@ class ImageSliders(QObject):
             #same image as the sorted image sliders.
             indexImageInMainList = self.imagePathList.index(self.selectedImagePath)
             self.mainImageSlider.setValue(indexImageInMainList+1)
+        except IndexError:
+            print(
+            &#34;Warning - due to the DICOM attribute sliders you have selected, you may not be able to navigate the series of images.&#34;
+            )
         except Exception as e:
             print(&#39;Error in ImageSliders.__multipleImageSliderMoved: &#39; + str(e))
             logger.exception(&#39;Error in ImageSliders.__multipleImageSliderMoved: &#39; + str(e))
@@ -935,6 +939,10 @@ navigating a DICOM series of images.</p></div>
             #same image as the sorted image sliders.
             indexImageInMainList = self.imagePathList.index(self.selectedImagePath)
             self.mainImageSlider.setValue(indexImageInMainList+1)
+        except IndexError:
+            print(
+            &#34;Warning - due to the DICOM attribute sliders you have selected, you may not be able to navigate the series of images.&#34;
+            )
         except Exception as e:
             print(&#39;Error in ImageSliders.__multipleImageSliderMoved: &#39; + str(e))
             logger.exception(&#39;Error in ImageSliders.__multipleImageSliderMoved: &#39; + str(e))
