--- a/Displays/ImageViewers/ComponentsUI/ImageSliders.html
+++ b/Displays/ImageViewers/ComponentsUI/ImageSliders.html
@@ -46,7 +46,7 @@ import pandas as pd
 import DICOM.ReadDICOM_Image as ReadDICOM_Image
 from DICOM.Classes import Series
 from External.PandasDICOM.DICOM_to_DataFrame import DICOM_to_DataFrame
-
+import time
 import logging
 logger = logging.getLogger(__name__)
 
@@ -106,6 +106,7 @@ class ImageSliders(QObject):
                  studyID, seriesID, imagePathList):
         try:
             #Super class QObject to provide support for pyqtSignal
+            start = time.perf_counter()
             super().__init__()
             self.imagePathList = imagePathList
             self.subjectID = subjectID
@@ -130,7 +131,7 @@ class ImageSliders(QObject):
             self. __addMultiSliderButtonToLayout()
             self.__createMainImageSlider()
             self.__addMainImageSliderToLayout()
-            #self.__setUpDisplayMultiSlidersCheckbox()
+            print(&#34;Time to instanciate ImageSliders object = {} seconds&#34;.format(time.perf_counter()-start))
         except Exception as e:
             print(&#39;Error in ImageSliders.__init__: &#39; + str(e))
             logger.error(&#39;Error in ImageSliders.__init__: &#39; + str(e))
@@ -227,6 +228,7 @@ class ImageSliders(QObject):
         &#34;&#34;&#34;
         try: 
             logger.info(&#34;ImageSliders.__mainImageSliderMoved called&#34;)
+            start = time.perf_counter()
             if imageNumber:
                 self.mainImageSlider.setValue(imageNumber)
             else:
@@ -268,6 +270,7 @@ class ImageSliders(QObject):
 
                 #Send the file path of current image to the parent application
                 self.sliderMoved.emit(self.selectedImagePath)
+                print(&#34;Main Image Slider moved = {} seconds&#34;.format(time.perf_counter() - start))
         except TypeError as e: 
             print(&#39;Type Error in ImageSliders.__mainImageSliderMoved: &#39; + str(e))
             logger.error(&#39;Type Error in ImageSliders.__mainImageSliderMoved: &#39; + str(e))
@@ -555,6 +558,7 @@ navigating a DICOM series of images.</p></div>
                  studyID, seriesID, imagePathList):
         try:
             #Super class QObject to provide support for pyqtSignal
+            start = time.perf_counter()
             super().__init__()
             self.imagePathList = imagePathList
             self.subjectID = subjectID
@@ -579,7 +583,7 @@ navigating a DICOM series of images.</p></div>
             self. __addMultiSliderButtonToLayout()
             self.__createMainImageSlider()
             self.__addMainImageSliderToLayout()
-            #self.__setUpDisplayMultiSlidersCheckbox()
+            print(&#34;Time to instanciate ImageSliders object = {} seconds&#34;.format(time.perf_counter()-start))
         except Exception as e:
             print(&#39;Error in ImageSliders.__init__: &#39; + str(e))
             logger.error(&#39;Error in ImageSliders.__init__: &#39; + str(e))
@@ -676,6 +680,7 @@ navigating a DICOM series of images.</p></div>
         &#34;&#34;&#34;
         try: 
             logger.info(&#34;ImageSliders.__mainImageSliderMoved called&#34;)
+            start = time.perf_counter()
             if imageNumber:
                 self.mainImageSlider.setValue(imageNumber)
             else:
@@ -717,6 +722,7 @@ navigating a DICOM series of images.</p></div>
 
                 #Send the file path of current image to the parent application
                 self.sliderMoved.emit(self.selectedImagePath)
+                print(&#34;Main Image Slider moved = {} seconds&#34;.format(time.perf_counter() - start))
         except TypeError as e: 
             print(&#39;Type Error in ImageSliders.__mainImageSliderMoved: &#39; + str(e))
             logger.error(&#39;Type Error in ImageSliders.__mainImageSliderMoved: &#39; + str(e))
