--- a/Displays/ImageViewers/ImageViewer.html
+++ b/Displays/ImageViewers/ImageViewer.html
@@ -64,6 +64,7 @@ from Displays.ImageViewers.ComponentsUI.PixelValueLabel import PixelValueCompone
 from Displays.ImageViewers.ComponentsUI.ImageLevelsSpinBoxes import ImageLevelsSpinBoxes as imageLevelsSpinBoxes
 from Displays.ImageViewers.ComponentsUI.FreeHandROI.Resources import * 
 
+import time
 import logging
 logger = logging.getLogger(__name__)
 
@@ -170,6 +171,8 @@ class ImageViewer(QMdiSubWindow):
 
     def setUpImageSliders(self):
         try:
+            logger.info(&#34;ImageViewer.setpUpImageSliders called.&#34;)
+            start = time.perf_counter()
             #create an instance of the ImageSliders class
             self.slidersWidget = imageSliders(self.weasel, 
                                              self.subjectID, 
@@ -191,6 +194,7 @@ class ImageViewer(QMdiSubWindow):
             #Display the first image in the viewer
             #self.displayPixelArrayOfSingleImage(self.imagePathList[0])
             self.slidersWidget.displayFirstImage()
+            print(&#34;ImageViewer.setUpImageSliders time = {} seconds&#34;.format(time.perf_counter()-start))
         except Exception as e:
             print(&#39;Error in ImageViewer.setUpImageSliders: &#39; + str(e))
             logger.error(&#39;Error in ImageViewer.setUpImageSliders: &#39; + str(e))
@@ -662,7 +666,7 @@ class ImageViewer(QMdiSubWindow):
         &#34;&#34;&#34;
         try:
             logger.info(&#34;ImageViewer.displayPixelArrayOfSingleImage called&#34;)
-
+            start = time.perf_counter()
             self.selectedImagePath = imagePath
             imageName = os.path.basename(self.selectedImagePath)
             self.pixelArray = ReadDICOM_Image.returnPixelArray(self.selectedImagePath)
@@ -713,7 +717,7 @@ class ImageViewer(QMdiSubWindow):
                         lambda pos: self.getPixelValue(pos))
                 self.graphicsView.getView().scene().sigMouseDragged.connect(
                         lambda ev: self.rightButtonDrag(ev))
-
+                print(&#34;ImageViewer.displayPixelArrayOfSingleImage time = {}&#34;.format(time.perf_counter()-start))
         except Exception as e:
             print(&#39;Error in ImageViewer.displayPixelArrayOfSingleImage: &#39; + str(e))
             logger.exception(&#39;Error in ImageViewer.displayPixelArrayOfSingleImage: &#39; + str(e))
@@ -1197,6 +1201,8 @@ sliders for browsing series of images.</p></div>
 
     def setUpImageSliders(self):
         try:
+            logger.info(&#34;ImageViewer.setpUpImageSliders called.&#34;)
+            start = time.perf_counter()
             #create an instance of the ImageSliders class
             self.slidersWidget = imageSliders(self.weasel, 
                                              self.subjectID, 
@@ -1218,6 +1224,7 @@ sliders for browsing series of images.</p></div>
             #Display the first image in the viewer
             #self.displayPixelArrayOfSingleImage(self.imagePathList[0])
             self.slidersWidget.displayFirstImage()
+            print(&#34;ImageViewer.setUpImageSliders time = {} seconds&#34;.format(time.perf_counter()-start))
         except Exception as e:
             print(&#39;Error in ImageViewer.setUpImageSliders: &#39; + str(e))
             logger.error(&#39;Error in ImageViewer.setUpImageSliders: &#39; + str(e))
@@ -1689,7 +1696,7 @@ sliders for browsing series of images.</p></div>
         &#34;&#34;&#34;
         try:
             logger.info(&#34;ImageViewer.displayPixelArrayOfSingleImage called&#34;)
-
+            start = time.perf_counter()
             self.selectedImagePath = imagePath
             imageName = os.path.basename(self.selectedImagePath)
             self.pixelArray = ReadDICOM_Image.returnPixelArray(self.selectedImagePath)
@@ -1740,7 +1747,7 @@ sliders for browsing series of images.</p></div>
                         lambda pos: self.getPixelValue(pos))
                 self.graphicsView.getView().scene().sigMouseDragged.connect(
                         lambda ev: self.rightButtonDrag(ev))
-
+                print(&#34;ImageViewer.displayPixelArrayOfSingleImage time = {}&#34;.format(time.perf_counter()-start))
         except Exception as e:
             print(&#39;Error in ImageViewer.displayPixelArrayOfSingleImage: &#39; + str(e))
             logger.exception(&#39;Error in ImageViewer.displayPixelArrayOfSingleImage: &#39; + str(e))
@@ -2430,7 +2437,7 @@ Also, sets the contrast and intensity in the associated histogram.</p></div>
     &#34;&#34;&#34;
     try:
         logger.info(&#34;ImageViewer.displayPixelArrayOfSingleImage called&#34;)
-
+        start = time.perf_counter()
         self.selectedImagePath = imagePath
         imageName = os.path.basename(self.selectedImagePath)
         self.pixelArray = ReadDICOM_Image.returnPixelArray(self.selectedImagePath)
@@ -2481,7 +2488,7 @@ Also, sets the contrast and intensity in the associated histogram.</p></div>
                     lambda pos: self.getPixelValue(pos))
             self.graphicsView.getView().scene().sigMouseDragged.connect(
                     lambda ev: self.rightButtonDrag(ev))
-
+            print(&#34;ImageViewer.displayPixelArrayOfSingleImage time = {}&#34;.format(time.perf_counter()-start))
     except Exception as e:
         print(&#39;Error in ImageViewer.displayPixelArrayOfSingleImage: &#39; + str(e))
         logger.exception(&#39;Error in ImageViewer.displayPixelArrayOfSingleImage: &#39; + str(e))</code></pre>
@@ -3107,6 +3114,8 @@ a colour map that can be used by the pyqtGraph imageView widget.</p></div>
 </summary>
 <pre><code class="python">def setUpImageSliders(self):
     try:
+        logger.info(&#34;ImageViewer.setpUpImageSliders called.&#34;)
+        start = time.perf_counter()
         #create an instance of the ImageSliders class
         self.slidersWidget = imageSliders(self.weasel, 
                                          self.subjectID, 
@@ -3128,6 +3137,7 @@ a colour map that can be used by the pyqtGraph imageView widget.</p></div>
         #Display the first image in the viewer
         #self.displayPixelArrayOfSingleImage(self.imagePathList[0])
         self.slidersWidget.displayFirstImage()
+        print(&#34;ImageViewer.setUpImageSliders time = {} seconds&#34;.format(time.perf_counter()-start))
     except Exception as e:
         print(&#39;Error in ImageViewer.setUpImageSliders: &#39; + str(e))
         logger.error(&#39;Error in ImageViewer.setUpImageSliders: &#39; + str(e))</code></pre>
