--- a/Pipelines/View__ImageMultiSlider.html
+++ b/Pipelines/View__ImageMultiSlider.html
@@ -36,14 +36,19 @@ __author__ = &#34;Steve Shillitoe&#34;
 
 
 def main(weasel):
-    checked_series = weasel.series()
-    if checked_series != []: 
-        for series in checked_series:
-            imageViewer(weasel, series)
-    else:
-        for image in weasel.images(msg = &#39;No images checked&#39;):
-            imageViewer(weasel, image)
-                    </code></pre>
+    try:
+        checked_series = weasel.series()
+        if checked_series != []: 
+            for series in checked_series:
+                imageViewer(weasel, series)
+        else:
+            for image in weasel.images(msg = &#39;No images checked&#39;):
+                imageViewer(weasel, image)
+    except (IndexError, AttributeError):
+        weasel.information(msg=&#34;Select either a series or an image&#34;, title=&#34;View DICOM header&#34;)
+    except Exception as e:
+            print(&#39;Error in View_ImageMultiSlider.main: &#39; + str(e))
+            logger.error(&#39;Error in View_ImageMultiSlider.main: &#39; + str(e))               </code></pre>
 </details>
 </section>
 <section>
@@ -63,13 +68,19 @@ def main(weasel):
 <span>Expand source code</span>
 </summary>
 <pre><code class="python">def main(weasel):
-    checked_series = weasel.series()
-    if checked_series != []: 
-        for series in checked_series:
-            imageViewer(weasel, series)
-    else:
-        for image in weasel.images(msg = &#39;No images checked&#39;):
-            imageViewer(weasel, image)</code></pre>
+    try:
+        checked_series = weasel.series()
+        if checked_series != []: 
+            for series in checked_series:
+                imageViewer(weasel, series)
+        else:
+            for image in weasel.images(msg = &#39;No images checked&#39;):
+                imageViewer(weasel, image)
+    except (IndexError, AttributeError):
+        weasel.information(msg=&#34;Select either a series or an image&#34;, title=&#34;View DICOM header&#34;)
+    except Exception as e:
+            print(&#39;Error in View_ImageMultiSlider.main: &#39; + str(e))
+            logger.error(&#39;Error in View_ImageMultiSlider.main: &#39; + str(e))               </code></pre>
 </details>
 </dd>
 </dl>
