--- a/Displays/ImageViewers/ImageViewerROI.html
+++ b/Displays/ImageViewers/ImageViewerROI.html
@@ -628,7 +628,7 @@ class ImageViewerROI(QMdiSubWindow):
             self.buttonList.append(self.btnErase)
             self.btnErase.setToolTip(&#34;Erase the ROI&#34;)
             self.btnErase.setCheckable(True)
-            self.btnErase.setIcon(QIcon(QPixmap(ERASOR_CURSOR)))
+            self.btnErase.setIcon(QIcon(QPixmap(ERASER_CURSOR)))
 
             self.btnDraw = QPushButton()
             self.buttonList.append(self.btnDraw)
@@ -1438,7 +1438,7 @@ sliders for browsing series of images.</p></div>
             self.buttonList.append(self.btnErase)
             self.btnErase.setToolTip(&#34;Erase the ROI&#34;)
             self.btnErase.setCheckable(True)
-            self.btnErase.setIcon(QIcon(QPixmap(ERASOR_CURSOR)))
+            self.btnErase.setIcon(QIcon(QPixmap(ERASER_CURSOR)))
 
             self.btnDraw = QPushButton()
             self.buttonList.append(self.btnDraw)
@@ -2473,7 +2473,7 @@ Also, sets the contrast and intensity in the associated histogram.</p></div>
         self.buttonList.append(self.btnErase)
         self.btnErase.setToolTip(&#34;Erase the ROI&#34;)
         self.btnErase.setCheckable(True)
-        self.btnErase.setIcon(QIcon(QPixmap(ERASOR_CURSOR)))
+        self.btnErase.setIcon(QIcon(QPixmap(ERASER_CURSOR)))
 
         self.btnDraw = QPushButton()
         self.buttonList.append(self.btnDraw)
