--- a/Displays/ImageViewers/ComponentsUI/FreeHandROI/Resources.html
+++ b/Displays/ImageViewers/ComponentsUI/FreeHandROI/Resources.html
@@ -28,6 +28,7 @@
 </summary>
 <pre><code class="python">MAGNIFYING_GLASS_CURSOR = &#39;Displays/ImageViewers/ComponentsUI/FreeHandROI/Icons/Magnifying_Glass.png&#39;
 PEN_CURSOR = &#39;Displays/ImageViewers/ComponentsUI/FreeHandROI/Icons/pencil.png&#39;
+BRUSH_CURSOR = &#39;Displays/ImageViewers/ComponentsUI/FreeHandROI/Icons/paint-brush.png&#39;
 ERASER_CURSOR = &#39;Displays/ImageViewers/ComponentsUI/FreeHandROI/Icons/erasor.png&#39;
 DELETE_ICON = &#39;Displays/ImageViewers/ComponentsUI/FreeHandROI/Icons/delete_icon.png&#39;
 NEW_ICON = &#39;Displays/ImageViewers/ComponentsUI/FreeHandROI/Icons/new_icon.png&#39;
