--- a/Displays/ImageViewers/ImageViewerROI.html
+++ b/Displays/ImageViewers/ImageViewerROI.html
@@ -239,7 +239,8 @@ class ImageViewerROI(QMdiSubWindow):
             # get the list of boolean masks for this series
             maskList = self.graphicsView.dictROIs.dictMasks[regionName] 
             # Convert each 2D boolean to 0s and 1s
-            maskList = [np.transpose(np.array(mask, dtype=np.int)) for mask in maskList] 
+            #maskList = [np.transpose(np.array(mask, dtype=np.int)) for mask in maskList] 
+            maskList = [np.array(mask, dtype=np.int) for mask in maskList] 
             suffix = str(&#34;_ROI_&#34;+ regionName)
             if len(maskList) &gt; 1:
                 inputPath = [i.path for i in self.weasel.images()]
@@ -433,6 +434,7 @@ class ImageViewerROI(QMdiSubWindow):
         if checked:
             self.setButtonsToDefaultStyle()
             self.graphicsView.setZoomEnabled(True)
+            self.graphicsView.graphicsItem.paintEnabled = False
             self.graphicsView.graphicsItem.drawEnabled = False
             self.graphicsView.graphicsItem.eraseEnabled = False
             self.btnZoom.setStyleSheet(&#34;background-color: red&#34;)
@@ -447,8 +449,8 @@ class ImageViewerROI(QMdiSubWindow):
     def getRoiMeanAndStd(self, mask, pixelArray):
         try:
             logger.info(&#34;ImageViewerROI.getRoiMeanAndStd called&#34;)
-            mean = round(np.mean(np.extract(np.transpose(mask), pixelArray)), 1)
-            std = round(np.std(np.extract(np.transpose(mask), pixelArray)), 1)
+            mean = round(np.mean(np.extract(mask, pixelArray)), 1)
+            std = round(np.std(np.extract(mask, pixelArray)), 1)
             return mean, std
         except Exception as e:
             print(&#39;Error in ImageViewerROI.getRoiMeanAndStd: &#39; + str(e))
@@ -458,6 +460,7 @@ class ImageViewerROI(QMdiSubWindow):
     def displayROIMeanAndStd(self):
         try:
             logger.info(&#34;ImageViewerROI.displayROIMeanAndStd called&#34;)
+            print(&#34;ImageViewerROI.displayROIMeanAndStd called&#34;) ##
             if self.isSeries:  
                 imageNumber = self.mainImageSlider.value()
             else:
@@ -466,7 +469,9 @@ class ImageViewerROI(QMdiSubWindow):
             regionName = self.cmbNamesROIs.currentText()
             mask = self.graphicsView.dictROIs.getMask(regionName, imageNumber)   
             if mask is not None:
+                print(&#34;mask is not none, size={}&#34;.format(len(mask)))##
                 mean, std = self.getRoiMeanAndStd(mask, pixelArray)
+                print(&#34;mean ={}, std ={}&#34;.format(mean, std)) ##
                 self.roiMeanTxt.setText(&#34;Mean: &#34; + str(mean))
                 self.roiStdDevTxt.setText(&#34;SD: &#34; + str(std))
             else:
@@ -721,16 +726,15 @@ class ImageViewerROI(QMdiSubWindow):
 
     def deleteROITidyUp(self):
         logger.info(&#34;ImageViewerROI.deleteROITidyUp called&#34;)
-    
         self.reloadImageInNewImageItem() 
         self.displayROIMeanAndStd()
         if self.cmbNamesROIs.currentIndex() == 0 and self.cmbNamesROIs.count() == 1: 
             self.cmbNamesROIs.clear()
             self.cmbNamesROIs.addItem(&#34;region1&#34;)
-            self.setCurrentIndex(0) 
+            self.cmbNamesROIs.setCurrentIndex(0) 
             self.roiMeanTxt.clear()
             self.roiStdDevTxt.clear()
-            self.pixelValueTxt.clear()
+            self.lblPixelValue.clear()
         else:
             if self.isSeries:  
                 imageNumber = self.mainImageSlider.value()
@@ -1104,7 +1108,8 @@ sliders for browsing series of images.</p></div>
             # get the list of boolean masks for this series
             maskList = self.graphicsView.dictROIs.dictMasks[regionName] 
             # Convert each 2D boolean to 0s and 1s
-            maskList = [np.transpose(np.array(mask, dtype=np.int)) for mask in maskList] 
+            #maskList = [np.transpose(np.array(mask, dtype=np.int)) for mask in maskList] 
+            maskList = [np.array(mask, dtype=np.int) for mask in maskList] 
             suffix = str(&#34;_ROI_&#34;+ regionName)
             if len(maskList) &gt; 1:
                 inputPath = [i.path for i in self.weasel.images()]
@@ -1298,6 +1303,7 @@ sliders for browsing series of images.</p></div>
         if checked:
             self.setButtonsToDefaultStyle()
             self.graphicsView.setZoomEnabled(True)
+            self.graphicsView.graphicsItem.paintEnabled = False
             self.graphicsView.graphicsItem.drawEnabled = False
             self.graphicsView.graphicsItem.eraseEnabled = False
             self.btnZoom.setStyleSheet(&#34;background-color: red&#34;)
@@ -1312,8 +1318,8 @@ sliders for browsing series of images.</p></div>
     def getRoiMeanAndStd(self, mask, pixelArray):
         try:
             logger.info(&#34;ImageViewerROI.getRoiMeanAndStd called&#34;)
-            mean = round(np.mean(np.extract(np.transpose(mask), pixelArray)), 1)
-            std = round(np.std(np.extract(np.transpose(mask), pixelArray)), 1)
+            mean = round(np.mean(np.extract(mask, pixelArray)), 1)
+            std = round(np.std(np.extract(mask, pixelArray)), 1)
             return mean, std
         except Exception as e:
             print(&#39;Error in ImageViewerROI.getRoiMeanAndStd: &#39; + str(e))
@@ -1323,6 +1329,7 @@ sliders for browsing series of images.</p></div>
     def displayROIMeanAndStd(self):
         try:
             logger.info(&#34;ImageViewerROI.displayROIMeanAndStd called&#34;)
+            print(&#34;ImageViewerROI.displayROIMeanAndStd called&#34;) ##
             if self.isSeries:  
                 imageNumber = self.mainImageSlider.value()
             else:
@@ -1331,7 +1338,9 @@ sliders for browsing series of images.</p></div>
             regionName = self.cmbNamesROIs.currentText()
             mask = self.graphicsView.dictROIs.getMask(regionName, imageNumber)   
             if mask is not None:
+                print(&#34;mask is not none, size={}&#34;.format(len(mask)))##
                 mean, std = self.getRoiMeanAndStd(mask, pixelArray)
+                print(&#34;mean ={}, std ={}&#34;.format(mean, std)) ##
                 self.roiMeanTxt.setText(&#34;Mean: &#34; + str(mean))
                 self.roiStdDevTxt.setText(&#34;SD: &#34; + str(std))
             else:
@@ -1586,16 +1595,15 @@ sliders for browsing series of images.</p></div>
 
     def deleteROITidyUp(self):
         logger.info(&#34;ImageViewerROI.deleteROITidyUp called&#34;)
-    
         self.reloadImageInNewImageItem() 
         self.displayROIMeanAndStd()
         if self.cmbNamesROIs.currentIndex() == 0 and self.cmbNamesROIs.count() == 1: 
             self.cmbNamesROIs.clear()
             self.cmbNamesROIs.addItem(&#34;region1&#34;)
-            self.setCurrentIndex(0) 
+            self.cmbNamesROIs.setCurrentIndex(0) 
             self.roiMeanTxt.clear()
             self.roiStdDevTxt.clear()
-            self.pixelValueTxt.clear()
+            self.lblPixelValue.clear()
         else:
             if self.isSeries:  
                 imageNumber = self.mainImageSlider.value()
@@ -1870,16 +1878,15 @@ sliders for browsing series of images.</p></div>
 </summary>
 <pre><code class="python">def deleteROITidyUp(self):
     logger.info(&#34;ImageViewerROI.deleteROITidyUp called&#34;)
-
     self.reloadImageInNewImageItem() 
     self.displayROIMeanAndStd()
     if self.cmbNamesROIs.currentIndex() == 0 and self.cmbNamesROIs.count() == 1: 
         self.cmbNamesROIs.clear()
         self.cmbNamesROIs.addItem(&#34;region1&#34;)
-        self.setCurrentIndex(0) 
+        self.cmbNamesROIs.setCurrentIndex(0) 
         self.roiMeanTxt.clear()
         self.roiStdDevTxt.clear()
-        self.pixelValueTxt.clear()
+        self.lblPixelValue.clear()
     else:
         if self.isSeries:  
             imageNumber = self.mainImageSlider.value()
@@ -1946,6 +1953,7 @@ Also, sets the contrast and intensity in the associated histogram.</p></div>
 <pre><code class="python">def displayROIMeanAndStd(self):
     try:
         logger.info(&#34;ImageViewerROI.displayROIMeanAndStd called&#34;)
+        print(&#34;ImageViewerROI.displayROIMeanAndStd called&#34;) ##
         if self.isSeries:  
             imageNumber = self.mainImageSlider.value()
         else:
@@ -1954,7 +1962,9 @@ Also, sets the contrast and intensity in the associated histogram.</p></div>
         regionName = self.cmbNamesROIs.currentText()
         mask = self.graphicsView.dictROIs.getMask(regionName, imageNumber)   
         if mask is not None:
+            print(&#34;mask is not none, size={}&#34;.format(len(mask)))##
             mean, std = self.getRoiMeanAndStd(mask, pixelArray)
+            print(&#34;mean ={}, std ={}&#34;.format(mean, std)) ##
             self.roiMeanTxt.setText(&#34;Mean: &#34; + str(mean))
             self.roiStdDevTxt.setText(&#34;SD: &#34; + str(std))
         else:
@@ -2054,8 +2064,8 @@ Also, sets the contrast and intensity in the associated histogram.</p></div>
 <pre><code class="python">def getRoiMeanAndStd(self, mask, pixelArray):
     try:
         logger.info(&#34;ImageViewerROI.getRoiMeanAndStd called&#34;)
-        mean = round(np.mean(np.extract(np.transpose(mask), pixelArray)), 1)
-        std = round(np.std(np.extract(np.transpose(mask), pixelArray)), 1)
+        mean = round(np.mean(np.extract(mask, pixelArray)), 1)
+        std = round(np.std(np.extract(mask, pixelArray)), 1)
         return mean, std
     except Exception as e:
         print(&#39;Error in ImageViewerROI.getRoiMeanAndStd: &#39; + str(e))
@@ -2296,7 +2306,8 @@ Also, sets the contrast and intensity in the associated histogram.</p></div>
         # get the list of boolean masks for this series
         maskList = self.graphicsView.dictROIs.dictMasks[regionName] 
         # Convert each 2D boolean to 0s and 1s
-        maskList = [np.transpose(np.array(mask, dtype=np.int)) for mask in maskList] 
+        #maskList = [np.transpose(np.array(mask, dtype=np.int)) for mask in maskList] 
+        maskList = [np.array(mask, dtype=np.int) for mask in maskList] 
         suffix = str(&#34;_ROI_&#34;+ regionName)
         if len(maskList) &gt; 1:
             inputPath = [i.path for i in self.weasel.images()]
@@ -2929,6 +2940,7 @@ zoom value</p></div>
     if checked:
         self.setButtonsToDefaultStyle()
         self.graphicsView.setZoomEnabled(True)
+        self.graphicsView.graphicsItem.paintEnabled = False
         self.graphicsView.graphicsItem.drawEnabled = False
         self.graphicsView.graphicsItem.eraseEnabled = False
         self.btnZoom.setStyleSheet(&#34;background-color: red&#34;)
